# sagittal_average_package

./: .gitignore  pyproject.toml  test_sagittal_brain.py
sagittal_average/: command.py  sagittal_brain.py
sagittal_average.egg-info/: PKG-INFO
